--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.TMT"
         tools:targetApi="31">
         <activity
+            android:name=".TMTBInformation"
+            android:exported="false" />
+        <activity
+            android:name=".TMTAInformation"
+            android:exported="false" />
+        <activity
             android:name=".InformationActivity"
             android:exported="false" />
         <activity
