--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.TMT"
         tools:targetApi="31">
         <activity
-            android:name=".HomeActivity"
+            android:name=".controller.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,19 +21,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".TestCompletedActivity"
+            android:name=".controller.TestCompletedActivity"
             android:exported="false" />
         <activity
-            android:name=".TMTBInformationActivity"
+            android:name=".controller.TMTBInformationActivity"
             android:exported="false" />
         <activity
-            android:name=".TMTAInformationActivity"
+            android:name=".controller.TMTAInformationActivity"
             android:exported="false" />
         <activity
-            android:name=".InformationActivity"
+            android:name=".controller.InformationActivity"
             android:exported="false" />
         <activity
-            android:name=".ResultsScreenActivity"
+            android:name=".controller.ResultsScreenActivity"
             android:exported="true">
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
@@ -41,7 +41,7 @@
 <!--            </intent-filter>-->
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".controller.MainActivity"
             android:exported="true">
 
         </activity>
